EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==04/24/2011==
Trevius: Added new Perl Mob quest objects GetItemHPBonuses() and GetSpellHPBonuses().

==04/17/2011==
Secrets: Converted PVP flags to be a variable, as there are other PVP rulesets embedded in the client. These will need code support to work properly. (IsAttackAllowed specifically.)
Secrets: Enabled Firiona Vie ruleset as an option. This disables OOC, makes languages hard to understand between races (somehow), and disables no-drop. If set to 2, this rule will only affect GMs, allowing players to be traded no-drop items from GMs. Player-to-Player trades are still considered active hacks, and are still detected.
Secrets: Made a rule to toggle the GM Petition Window in titanium. You will need the guide petition files for that client, and it still needs code support to work. (find these yourself.)
Secrets: Added expansion settings to the rule_values table instead of the variables. The PVP settings will also be here now, too. (See Optional SQL with this update.)
Secrets: Fixed an issue pointed out by Trevius in the previous commit.

Optional SQL: utils/sql/svn/1885_optional_rules_fv_pvp_expansions.sql


==04/13/2011==
BadCaptain: Bot spell update- Group Heals, debuff spells, spell recast timers, healing AI tweaked, bot bards can now have more than one song active
Optional SQL: utils/sql/svn/1884_optional_bot_spells_update.sql

==04/12/2011==
Trevius: The mana regen portion of bard songs is no longer affected by instrument mods.
Trevius: (scruffy) Identified opcodes for /zone and petition queue on Titanium.

==04/06/2011==
Derision: Underfoot: Corrected OP_CompletedTasks.

==03/30/2011==
Trevius: Implemented spell formulas 1001 to 1998.  They subtract/add values by increasing amounts each tick based on the formula - 1000 value.

==03/23/2011==
JJ: (Danyelle) Face fix for Iksar Beastlord pet.

==03/21/2011==