@@ -530,6 +530,7 @@ OP_WeaponEquip2=0x63da
 OP_WeaponUnequip2=0x381d
 OP_VoiceMacroIn=0x2866		# Client to Server
 OP_VoiceMacroOut=0x2ec6		# Server to Client
+OP_CameraEffect=0x0937			# Correct
 
 #named unknowns, to make looking for real unknown easier
 OP_AnnoyingZoneUnknown=0x729c
