@@ -4760,6 +4760,16 @@ void EntityList::AddLootToNPCS(uint32 item_id, uint32 count)
 	safe_delete_array(marked);
 }
 
+void EntityList::CameraEffect(uint32 duration, uint32 intensity) {
+	EQApplicationPacket* outapp = new EQApplicationPacket(OP_CameraEffect, sizeof(Camera_Struct));
+	memset(outapp->pBuffer, 0, sizeof(outapp->pBuffer));
+	Camera_Struct* cs = (Camera_Struct*) outapp->pBuffer;
+	cs->duration = duration;	// Duration in milliseconds
+	cs->intensity = ((intensity * 6710886) + 1023410176);	// Intensity ranges from 1023410176 to 1090519040, so simplify it from 0 to 10.
+	entity_list.QueueClients(0, outapp);
+	safe_delete(outapp);
+}
+
 
 NPC* EntityList::GetClosestBanker(Mob* sender, uint32 &distance)
 {
