@@ -469,7 +469,7 @@ bool logpos;
 	void SendLevelAppearance();
 	void SendAppearanceEffect(int32 parm1, int32 parm2, int32 parm3, int32 parm4, int32 parm5, Client *specific_target=NULL);
 	void QuestReward(Client *c=NULL, int32 silver = 0, int32 gold = 0, int32 platinum = 0);
-	void CameraEffect(uint32 duration, uint32 intensity, Client *c=NULL);
+	void CameraEffect(uint32 duration, uint32 intensity, Client *c=NULL, bool global = false);
 	void SendSpellEffect(uint32 effectid, int32 duration, int32 finish_delay, bool zone_wide, int32 unk020, bool perm_effect=false, Client *c=NULL);
 	void TempName(const char *newname = NULL);
 
